AX: AXPropertyName::{ColumnIndex, RowIndex} are not updated on the isolated tree https://bugs.webkit.org/show_bug.cgi?id=270535 rdar://118240861

Reviewed by Tyler Wilcock.

These properties, ColumnIndex and RowIndex, were never updated on isolated objects
after being initialized. This can cause issues as ATs rely on these properties to
accurately navigate tables.

Two tests were added to flex this behavior. table-insert-second-thead.html also
tests that we are resilient to authoring errors with respect to multiple table
header elements.

* LayoutTests/accessibility/dynamic-table-row-column-indices-expected.txt: Added.
* LayoutTests/accessibility/dynamic-table-row-column-indices.html: Added.
* LayoutTests/accessibility/table-insert-second-thead-expected.txt: Added.
* LayoutTests/accessibility/table-insert-second-thead.html: Added.
* LayoutTests/platform/glib/TestExpectations:
* LayoutTests/platform/mac-wk1/TestExpectations:
* Source/WebCore/accessibility/AXObjectCache.cpp:
(WebCore::AXObjectCache::columnIndexChanged):
(WebCore::AXObjectCache::rowIndexChanged):
(WebCore::AXObjectCache::updateIsolatedTree):
* Source/WebCore/accessibility/AXObjectCache.h:
* Source/WebCore/accessibility/AccessibilityTableColumn.cpp:
(WebCore::AccessibilityTableColumn::setColumnIndex):
* Source/WebCore/accessibility/AccessibilityTableColumn.h:
* Source/WebCore/accessibility/AccessibilityTableRow.cpp:
(WebCore::AccessibilityTableRow::setRowIndex):
* Source/WebCore/accessibility/AccessibilityTableRow.h:
(WebCore::AccessibilityTableRow::setRowIndex): Deleted.
* Source/WebCore/accessibility/isolatedtree/AXIsolatedTree.cpp:
(WebCore::AXIsolatedTree::updateNodeProperties):

Canonical link: https://commits.webkit.org/275762@main