Source/WebCore/accessibility/AXObjectCache.cpp
@@ -1478,14 +1478,14 @@ void AXObjectCache::valueChanged(Element* element)
 }
 
 #if ENABLE(ACCESSIBILITY_ISOLATED_TREE)
-void AXObjectCache::columnIndexChanged(AccessibilityTableCell& cell)
+void AXObjectCache::columnIndexChanged(AccessibilityObject& object)
 {
-    postNotification(cell, AXColumnIndexChanged);
+    postNotification(object, AXColumnIndexChanged);
 }
 
-void AXObjectCache::rowIndexChanged(AccessibilityTableCell& cell)
+void AXObjectCache::rowIndexChanged(AccessibilityObject& object)
 {
-    postNotification(cell, AXRowIndexChanged);
+    postNotification(object, AXRowIndexChanged);
 }
 #endif // ENABLE(ACCESSIBILITY_ISOLATED_TREE)
 
@@ -4371,6 +4371,8 @@ void AXObjectCache::updateIsolatedTree(const Vector<std::pair<RefPtr<Accessibili
             tree->queueNodeUpdate(notification.first->objectID(), { AXPropertyName::AXColumnCount });
             break;
         case AXColumnIndexChanged:
+            tree->queueNodeUpdate(notification.first->objectID(), { { AXPropertyName::ColumnIndexRange, AXPropertyName::ColumnIndex } });
+            break;
         case AXColumnSpanChanged:
             tree->queueNodeUpdate(notification.first->objectID(), { AXPropertyName::ColumnIndexRange });
             break;
@@ -4436,6 +4438,8 @@ void AXObjectCache::updateIsolatedTree(const Vector<std::pair<RefPtr<Accessibili
             tree->queueNodeUpdate(notification.first->objectID(), { AXPropertyName::RoleDescription });
             break;
         case AXRowIndexChanged:
+            tree->queueNodeUpdate(notification.first->objectID(), { { AXPropertyName::RowIndexRange, AXPropertyName::RowIndex } });
+            break;
         case AXRowSpanChanged:
             tree->queueNodeUpdate(notification.first->objectID(), { AXPropertyName::RowIndexRange });
             break;
